fix(SPA): 过滤 XSS

--- a/resources/spa/src/style/base.less
+++ b/resources/spa/src/style/base.less
@@ -231,6 +231,9 @@ body,
   word-wrap: break-word;
   word-break: break-all;
 }
+.m-text-pre {
+  white-space: pre-wrap;
+}
 
 .m-text-box > * {
   margin: 0 0 0.375 * 16px 0;
